Add a file exclusive for turing machine: turingmachine.js; put the other stuff on main.js; rewrite README.md with instructions to use turingMachine object

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 		  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 		  crossorigin="anonymous">
 	</script>
+	<script type="text/javascript" src="lib/turingmachine.js"></script>
 	<script type="text/javascript" src="lib/main.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			turingMachine.init();
+			runner.run();	
+		});
+	</script>
 </body>
 </html>
